# oldPorjects

Prijemni/P1/: Makefile  P1.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h
bench/: app-c  app-cpp  app.c  app.cpp  app.cpp~  app.c~  app.py  app.py~
crtanje/proba1/: cinthread.cpp  cinthread.h  main.cpp  proba1.pro  widget.cpp  widget.h
crtanje/proba2/: main.cpp  proba2.pro
eclipse-workspace-backup/MyClient/: .classpath  .project
eclipse-workspace-backup/Proba1/: .project  ulaz.txt
eclipse-workspace-backup/Projekat1-agenti/: .project
eclipse-workspace-backup/RMI-Proba-Server/: .project
eclipse-workspace-backup/RMI-probe/: .project
eclipse-workspace-backup/SpisakMaker/: .project
eclipse-workspace-backup/StringBuilderRad/: .project
eclipse-workspace-backup/Testiranje-Client/: .project
eclipse-workspace-backup/Testiranje1/: .project
eclipse-workspace-backup/TestiranjeClient/: .classpath  .project
eclipse-workspace-backup/Web>ShopText2/: .project
eclipse-workspace-backup/WebShop/: .project
eclipse-workspace-backup/WebShop2/: .classpath  .project
eclipse-workspace-backup/WebShopTest/: .project
general-in-vala/src/: Makefile  Makefile.am  Makefile.in  main.c  main.vala
general-in-vala/src/.deps/: directorymodel.Po  listview.Po  main.Po  mymodel.Po
general-in-vala/src/components/: directorymodel.c  directorymodel.vala  listview.c  listview.vala  mymodel.c  mymodel.vala
pyedit/: main.py  main.py~
widget-qt4/: Makefile  getconfig.py  main.cpp  testmodule.py  widget  widget.pro
(+428 files in other folders)
